--- a/packages.yml
+++ b/packages.yml
@@ -1,9 +1,14 @@
 - hosts: localhost
   tasks: 
     - name: install xquartz
-      homebrew_cask: name=xquartz state=present
+      homebrew_cask: 
+        name: xquartz
+        state: present
     - name: Install Brew packages
-      homebrew: name='{{ item }}' state=present update_homebrew=yes
+      homebrew: 
+        name: '{{ item }}'
+        state: present 
+        update_homebrew: yes
       with_items:
         - bash
         - cmake
@@ -51,7 +56,9 @@
         - zsh
         - zsh-completions
     - name: Install Brew Cask packages
-      homebrew_cask: name='{{ item }}' state=present
+      homebrew_cask:
+        name: '{{ item }}' 
+        state: present
       with_items:
         - atom
         - bartender
