--- a/dotfiles.yml
+++ b/dotfiles.yml
@@ -2,17 +2,13 @@
   tasks: 
    - name: Set Global Git config 
      git_config: 
-       name: user.name 
-       value: 'Damien Nugent' 
+       name: "{{ item.name }}"
+       value: "{{ item.value }}"
        scope: global
-     git_config:
-       name: user.email 
-       value: 'damien@damiennugent.com' 
-       scope: global
-     git_config: 
-       name: core.editor 
-       value: vim 
-       scope: global
+     with_items:
+      - { name: 'user.name', value: 'Damien Nugent' }
+      - { name: 'user.email', value: 'damien@damiennugent.com' }
+      - { name: 'core.editor', value: 'vim' }
 
    - name: Create gitstuff directory
      file: 
