--- a/packages.yml
+++ b/packages.yml
@@ -72,6 +72,7 @@
       with_items:
         - atom
         - bartender
+        - cheatsheet
         - discord
         - docker
         - dropbox
